# goose

./: .rustfmt.toml  Cargo.toml
.githooks/: pre-commit
src/: context.rs  intern.rs  main.rs  object.rs  repl.rs  token.rs  value.rs
