[package]
name = "goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
internment = "0.7.0"
logos = "0.12.1"
reqwest = { version = "0.11.12", features = ["json", "native-tls"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
